--- a/index.html
+++ b/index.html
@@ -291,12 +291,12 @@
     <section class="smt-hero">
         <div class="background-slider">
             <div class="slide" style="background-image: url('images/cover.jpg');"></div>
-            <div class="slide" style="background-image: url('images/cover3.jpeg');"></div>
-            <div class="slide" style="background-image: url('images/cover.jpeg');"></div>
-            <div class="slide" style="background-image: url('images/cover4.jpeg');"></div>
+            <div class="slide" style="background-image: url('images/bgk3.jpeg');"></div>
+            <div class="slide" style="background-image: url('images/bgk4.jpeg');"></div>
+            <div class="slide" style="background-image: url('images/bgk2.jpeg');"></div>
         </div>
         <div class="container text-center">
-            <h2 class="display-4 fw-bold mb-4">Sistem Informasi Pertanahan Desa Kendel</h2>
+            <h2 class="display-4 fw-bold mb-4"> </h2>
         </div>
     </section>
 
@@ -310,7 +310,7 @@
                     <div class="card smt-card">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=60" class="img-fluid rounded-start" alt="Pembaruan Data Tanah" loading="lazy" onerror="this.src='https://via.placeholder.com/200x150?text=Gambar+Tidak+Tersedia'">
+                                <img src="images/pembaruan.jpg" class="img-fluid rounded-start" alt="Pembaruan Data Tanah" loading="lazy" onerror="this.src='https://via.placeholder.com/200x150?text=Gambar+Tidak+Tersedia'">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -329,13 +329,13 @@
                     <div class="card smt-card">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=60" class="img-fluid rounded-start" alt="Sosialisasi LANDAS" loading="lazy" onerror="this.src='https://via.placeholder.com/200x150?text=Gambar+Tidak+Tersedia'">
+                                <img src="images/simulasi bencana.jpeg" class="img-fluid rounded-start" alt="Sosialisasi LANDAS" loading="lazy" onerror="this.src='https://via.placeholder.com/200x150?text=Gambar+Tidak+Tersedia'">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <span class="badge bg-success">Event</span>
-                                    <h5 class="card-title">Sosialisasi Sistem LANDAS</h5>
-                                    <p class="card-text">Acara sosialisasi penggunaan sistem LANDAS di balai desa pada 10 Juni 2025.</p>
+                                    <span class="badge bg-success">Berita</span>
+                                    <h5 class="card-title">Pemkab Boyolali gelar simulasi antisipasi bencana</h5>
+                                    <p class="card-text">Acara Pemkab Boyolali gelar simulasi antisipasi bencana di balai desa pada 10 Juni 2025.</p>
                                     <p class="card-text"><small class="text-muted">29 Mei 2025</small></p>
                                     <a href="berita.html" class="btn btn-sm btn-primary">Lihat Detail</a>
                                 </div>
@@ -348,13 +348,13 @@
                     <div class="card smt-card">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=60" class="img-fluid rounded-start" alt="Pelatihan Administrasi" loading="lazy" onerror="this.src='https://via.placeholder.com/200x150?text=Gambar+Tidak+Tersedia'">
+                                <img src="images/jembatan ambruk.jpg" class="img-fluid rounded-start" alt="Pelatihan Administrasi" loading="lazy" onerror="this.src='https://via.placeholder.com/200x150?text=Gambar+Tidak+Tersedia'">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <span class="badge bg-success">Event</span>
-                                    <h5 class="card-title">Pelatihan Administrasi Pertanahan</h5>
-                                    <p class="card-text">Pelatihan untuk petugas desa tentang administrasi pertanahan pada 15 Juni 2025.</p>
+                                    <span class="badge bg-success">Berita</span>
+                                    <h5 class="card-title">Banjir di Kendel Kemusu Boyolali: Jembatan Putus</h5>
+                                    <p class="card-text">Bencana banjir di Kendel mengakibatkan jembatan putus</p>
                                     <p class="card-text"><small class="text-muted">28 Mei 2025</small></p>
                                     <a href="berita.html" class="btn btn-sm btn-primary">Lihat Detail</a>
                                 </div>
