--- a/profil-wilayah.html
+++ b/profil-wilayah.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Profil Wilayah Desa Segoro Madu - LANDAS">
-    <meta name="keywords" content="Profil Wilayah, Desa Segoro Madu, Sistem Informasi Pertanahan">
+    <meta name="description" content="Profil Wilayah Desa Kendel - LANDAS">
+    <meta name="keywords" content="Profil Wilayah, Desa Kendel, Kecamatan Kemusu, Kabupaten Boyolali, Sistem Informasi Pertanahan">
     <meta name="author" content="LANDAS Team">
     <title>Profil Wilayah - LANDAS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -62,6 +62,58 @@
             background-color: rgba(0,91,128,0.1);
         }
 
+        .smt-hero {
+            position: relative;
+            color: white;
+            padding: 6rem 0;
+            overflow: hidden;
+            min-height: 500px;
+        }
+
+        .background-slider {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+        }
+
+        .background-slider .slide {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-position: center;
+            opacity: 0;
+            transition: opacity 1s ease-in-out;
+            animation: slideShow 32s infinite;
+        }
+
+        .background-slider .slide:nth-child(1) { animation-delay: 0s; }
+        .background-slider .slide:nth-child(2) { animation-delay: 8s; }
+        .background-slider .slide:nth-child(3) { animation-delay: 16s; }
+        .background-slider .slide:nth-child(4) { animation-delay: 24s; }
+
+        @keyframes slideShow {
+            0% { opacity: 0; }
+            6.25% { opacity: 1; }
+            25% { opacity: 1; }
+            31.25% { opacity: 0; }
+            100% { opacity: 0; }
+        }
+
+        .smt-hero .container {
+            position: relative;
+            z-index: 2;
+        }
+
+        .smt-hero h2, .smt-hero p {
+            text-shadow: 2px 2px 8px rgba(0,0,0,0.8);
+        }
+
         .smt-card {
             border: none;
             border-radius: 12px;
@@ -116,6 +168,15 @@
             background-color: rgba(0,91,128,0.1);
         }
 
+        .news-event-section .smt-card {
+            margin-bottom: 1.5rem;
+        }
+
+        .news-event-section .badge {
+            font-size: 0.9rem;
+            padding: 0.5em 1em;
+        }
+
         .quick-link-modal .modal-header {
             background-color: var(--smt-blue);
             color: white;
@@ -132,12 +193,24 @@
         }
 
         @media (max-width: 768px) {
+            .smt-hero {
+                padding: 4rem 0;
+            }
+
             .smt-logo {
                 height: 60px;
             }
 
             .smt-nav-link {
                 padding: 0.75rem 1rem !important;
+            }
+
+            .smt-hero h2 {
+                font-size: 2rem;
+            }
+
+            .smt-hero p {
+                font-size: 1rem;
             }
 
             .smt-nav {
@@ -198,7 +271,7 @@
                             <i class="fas fa-file-alt me-1"></i> Publikasi
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="publikasiDropdown">
-                            <li><a class="dropdown-item restricted-link" href="peta-pertanahan.html"><i class="fas fa-map me-2"></i> Peta Pertanahan</a></li>
+                            <li><a class="dropdown-item restricted-link" href="https://nuraziz27.github.io/nuraziz.github.io/"><i class="fas fa-map me-2"></i> Peta Pertanahan</a></li>
                             <li><a class="dropdown-item restricted-link" href="data-tanah.html"><i class="fas fa-table me-2"></i> Data Tanah</a></li>
                             <li><a class="dropdown-item restricted-link" href="laporan-pertanahan.html"><i class="fas fa-file-text me-2"></i> Laporan Pertanahan</a></li>
                         </ul>
@@ -214,19 +287,31 @@
         </div>
     </nav>
 
+    <!-- Hero Section -->
+    <section class="smt-hero">
+        <div class="background-slider">
+            <div class="slide" style="background-image: url('images/c1.jpeg');"></div>
+            <div class="slide" style="background-image: url('images/c2.jpeg');"></div>
+            <div class="slide" style="background-image: url('images/c3.jpeg');"></div>
+            <div class="slide" style="background-image: url('images/bgk3.jpeg');"></div>
+        </div>
+        <div class="container text-center">
+            <h2 class="display-4 fw-bold mb-4">Profil Wilayah Desa Kendel</h2>
+        </div>
+    </section>
+
     <!-- Main Content -->
     <section class="py-5">
         <div class="container">
-            <h2 class="text-center mb-4">Profil Wilayah Desa Segoro Madu</h2>
             <div class="row">
                 <div class="col-md-12">
                     <div class="smt-card p-4">
                         <h4>Sejarah Desa</h4>
-                        <p>Desa Segoro Madu terletak di wilayah pesisir dengan sejarah panjang sebagai pusat pertanian dan perikanan. Didirikan pada abad ke-18, desa ini dikenal dengan kebersamaan warganya dalam mengelola lahan pertanahan.</p>
+                        <p>Desa Kendel, terletak di Kecamatan Kemusu, Kabupaten Boyolali, memiliki sejarah yang kaya sebagai kawasan pertanian. Berdiri sejak abad ke-19, desa ini dikenal dengan semangat gotong royong warganya dalam pengelolaan lahan pertanian dan tradisi budaya lokal.</p>
                         <h4>Geografi</h4>
-                        <p>Luas wilayah Desa Segoro Madu mencapai 500 hektar, dengan 60% lahan digunakan untuk pertanian, 20% untuk permukiman, dan sisanya untuk fasilitas umum dan konservasi.</p>
+                        <p>Desa Kendel memiliki luas wilayah sekitar 450 hektar, dengan 70% lahan digunakan untuk pertanian, 15% untuk permukiman, dan sisanya untuk fasilitas umum dan kawasan hijau.</p>
                         <h4>Demografi</h4>
-                        <p>Penduduk desa berjumlah sekitar 2.500 jiwa, dengan mayoritas bekerja sebagai petani dan nelayan. Pendidikan dan kesehatan menjadi fokus utama pembangunan desa.</p>
+                        <p>Penduduk Desa Kendel berjumlah sekitar 3.000 jiwa, dengan mayoritas bermata pencaharian sebagai petani. Desa ini fokus pada pengembangan pendidikan dan infrastruktur untuk meningkatkan kesejahteraan masyarakat.</p>
                     </div>
                 </div>
             </div>
@@ -241,7 +326,7 @@
                     <h5>Kontak Kami</h5>
                     <p><i class="fas fa-map-marker-alt me-2"></i> Jl. Banjarsari, Tembalang, Kota Semarang</p>
                     <p><i class="fas fa-phone me-2"></i> 08998639593</p>
-                    <p><i class="fas fa-envelope me-2"></i> info@wisatayuk.go.id</p>
+                    <p><i class="fas fa-envelope me-2"></i> azizsyaifudin20@gmail.com</p>
                 </div>
                 <div class="col-md-4">
                     <h5>Tautan Cepat</h5>
@@ -353,7 +438,7 @@
                 </div>
                 <div class="modal-body">
                     <p>Kami di LANDAS berkomitmen untuk melindungi privasi pengguna. Informasi pribadi yang dikumpulkan hanya digunakan untuk meningkatkan pengalaman pengguna dan tidak akan dibagikan tanpa persetujuan.</p>
-                    <p>Untuk detail lebih lanjut, silakan hubungi kami di <a href="mailto:info@wisatayuk.go.id">info@wisatayuk.go.id</a>.</p>
+                    <p>Untuk detail lebih lanjut, silakan hubungi kami di <a href="mailto:azizsyaifudin20@gmail.com">azizsyaifudin20@gmail.com</a>.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Tutup</button>
@@ -391,7 +476,7 @@
                 </div>
                 <div class="modal-body">
                     <h6>Bagaimana cara mengakses data pertanahan?</h6>
-                    <p>Login terlebih dahulu, lalu telusuri halaman Publikasi untuk menemukan Peta Pertanahan, Data Tanah, atau Laporan Pertanahan.</p>
+                    <p>Telusuri halaman Publikasi untuk menemukan Peta Pertanahan, Data Tanah, atau Laporan Pertanahan setelah login.</p>
                     <h6>Apakah LANDAS menyediakan layanan konsultasi?</h6>
                     <p>Untuk informasi lebih lanjut, hubungi kami melalui halaman Kontak.</p>
                 </div>
@@ -415,7 +500,7 @@
                         <li><a href="index.html">Beranda</a></li>
                         <li><a href="profil-wilayah.html">Profil Wilayah</a></li>
                         <li><a href="anggota-kelompok.html">Anggota Kelompok</a></li>
-                        <li><a href="peta-pertanahan.html" class="restricted-link">Peta Pertanahan</a></li>
+                        <li><a href="https://nuraziz27.github.io/nuraziz.github.io/" class="restricted-link">Peta Pertanahan</a></li>
                         <li><a href="data-tanah.html" class="restricted-link">Data Tanah</a></li>
                         <li><a href="laporan-pertanahan.html" class="restricted-link">Laporan Pertanahan</a></li>
                         <li><a href="berita.html">Berita</a></li>
@@ -583,7 +668,7 @@
         if (forgotPasswordLink) {
             forgotPasswordLink.addEventListener('click', function(e) {
                 e.preventDefault();
-                alert('Fitur reset password akan segera tersedia! Silakan hubungi info@wisatayuk.go.id.');
+                alert('Fitur reset password akan segera tersedia! Silakan hubungi azizsyaifudin20@gmail.com.');
             });
         }
 
@@ -598,6 +683,7 @@
                 registerModal.show();
             });
         }
+
         // Penanganan link terbatas (Publikasi)
         const restrictedLinks = document.querySelectorAll('.restricted-link');
         restrictedLinks.forEach(link => {
@@ -610,6 +696,7 @@
                 }
             });
         });
+
         // Cek status login saat halaman dimuat
         window.addEventListener('load', function() {
             currentUser = JSON.parse(localStorage.getItem('currentUser') || sessionStorage.getItem('currentUser')) || null;
