--- a/laporan-pertanahan.html
+++ b/laporan-pertanahan.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Laporan Pertanahan Desa Segoro Madu - LANDAS">
-    <meta name="keywords" content="Laporan Pertanahan, Desa Segoro Madu, Sistem Informasi Pertanahan">
+    <meta name="description" content="Laporan Pertanahan Desa Kendel - LANDAS">
+    <meta name="keywords" content="Laporan Pertanahan, Desa Kendel, Sistem Informasi Pertanahan">
     <meta name="author" content="LANDAS Team">
     <title>Laporan Pertanahan - LANDAS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
